--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,21 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.12.0</version>
 		</dependency>
+
+			<!--Log4j2 -->
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-api</artifactId>
+				<version>2.21.1</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-core</artifactId>
+				<version>2.21.1</version>
+			</dependency>
+			<!--Log4j2 end -->
+
 	</dependencies>
 
 	<build>
